--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h3>Dissertação de mestrado</h3>
     <p>jogos didáticos</p>
     <p><b>aprendendo os comandos do atom</b></p>
+    <p>incluindo arquivos no github</p>
 
 
   </body>
