--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <title></title>
   </head>
   <body>
-    <h3>Dissertação de mestrado</h3>
-    <p>jogos didáticos</p>
-    <p><b>aprendendo os comandos do atom</b></p>
-    <p>incluindo arquivos no github</p>
+    <h3>Trabalhos Manuais</h3>
+    <p>Tricô, crochê, costura e bordado </p>
+    <p><b>dicas para iniciar</b></p>
+    <p>receitas e esquemas</p>
 
 
   </body>
